--- a/time-off-management/src/main/resources/templates/login.html
+++ b/time-off-management/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
-    <link  rel="stylesheet" th:href="@{/css/signup.css}" >
+    <link  rel="stylesheet" th:href="@{/css/login.css}" >
     <title>Login Form</title>
     
   </head>
@@ -20,8 +20,8 @@
          
             <form class="mx-auto" th:action="@{/signup}" method="post">
                
-            <div class="user_img">
-                <img th:src="@{/images/GinnIcon.png}" alt="" width="70px";>
+            <div class="user_img mb-3">
+                <img th:src="@{/images/login.jpg}" alt="">
             </div>
                 
                 
