--- a/time-off-management/src/main/resources/templates/member.html
+++ b/time-off-management/src/main/resources/templates/member.html
@@ -33,16 +33,18 @@
 
            </div>
            
-                           <div class="mt-5 px-4 mx-3  " style="margin-left: 0px;">
-                    <div class="tbl-container bdr   custom-border">
+                           <div  class="mt-5 px-4 mx-3  " style="margin-left: 0px;">
+                    <div th:if="${not #lists.isEmpty(list)}" class="tbl-container bdr   custom-border" >
                         <!-- <== overflow: hidden applied to parent -->
-                        <table class="table table-hover table-responsive-sm table-borderless" style="padding: auto;">
-                            <thead class="bg-red">
+                        <table  class="table table-hover table-responsive-sm table-borderless" style="padding: auto;">
+                            <thead class="bg-member">
                                 <tr class="custom-border">
 
-                                    <th scope="col" style="width: 3%">Name</th>
-                                    <th scope="col" style="width: 3%">Email</th>
-                                    <th scope="col" style="width: 3%">Phone</th>
+                                    <th scope="col" style="width: 3%; color: white;">Name</th>
+                                    <th scope="col" style="width: 3%; color: white;">Email</th>
+                                    <th scope="col" style="width: 3%; color: white;">Phone</th>
+                                    <th scope="col" style="width: 3%; color:white;">Salary</th>
+                                    
                                 </tr>
                             </thead>
                             <tbody>
@@ -50,6 +52,8 @@
                                     <td th:text="${member.name}"></td>
                                     <td th:text="${member.email}"></td>
                                     <td th:text="${member.phone}"></td>
+									<td th:text="${member.salary}"></td>
+                                    
                                 </tr>
                                
                             </tbody>
