--- a/time-off-management/src/main/resources/templates/fragments/sidebar.html
+++ b/time-off-management/src/main/resources/templates/fragments/sidebar.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    
-      
-            <nav th:fragment="sidebar"><!--sidebar-->
-
-                <h1 class="h4 text-center text-white-50 py-4">
-
-                    <img th:src="@{/images/Eru.jpg}" class="rounded-circle rounded-circle-custom " alt="Profile Picture">
-                    <span class="d-none d-lg-inline">Linn</span>
-
-
-                </h1>
-
-
-                <div class="list-group text-center text-lg-start">
-
-                    <a th:href="@{/home}" class="list-group-item list-group-item-dark list-group-item-action">
-                        <i class="fas fa-home"></i>
-                        <span class="d-none d-lg-inline">Requests</span>
-                    </a>
-
-                    <a th:href="@{/departments}" class="list-group-item list-group-item-dark list-group-item-action">
-                        <i class="fa-solid fa-building"></i>
-                        <span class="d-none d-lg-inline">Department</span>
-                    </a>
-
-                    <a th:href="@{/employees}" class="list-group-item  list-group-item-dark list-group-item-action">
-                        <i class="fas fa-users"></i>
-                        <span class="d-none d-lg-inline">Employees</span>
-                    </a>
-                    <a href="salary.html" class="list-group-item  list-group-item-dark list-group-item-action">
-                        <i class="fas fa-chart-line"></i>
-                        <span class="d-none d-lg-inline">Salaries</span>
-                    </a>
-                    <a href="reports.html" class="list-group-item list-group-item-dark list-group-item-action">
-                        <i class="fas fa-flag"></i>
-                        <span class=" d-none d-lg-inline">Reports</span>
-                    </a>
-
-                    <a href="settings.html" class="list-group-item list-group-item-dark list-group-item-action">
-                        <i class="fa-solid fa-bars"></i>
-                        <span class="d-none d-lg-inline">Settings</span>
-                    </a>
-                </div>
-            </nav>
-
+	<section layout:fragment="sidebar" >
+	
+    <nav th:fragment="sidebar"  class="sidebar ">
+    	
+        <div class="brand">
+            <img th:src="@{/images/Eru.jpg}" class="brand-logo" alt="Profile Picture">
+            <span class="brand-name">Linn</span>
+        </div>
+        
+     
+        <ul class="menu-items">
+            <li>
+                <a th:href="@{/home}" th:classappend="${page == 'home' ? 'active' : ''}" class="menu-item">
+                    <i class="fas fa-home"></i>
+                    <span>Requests</span>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/departments}" th:classappend="${page == 'departments' ? 'active' : ''}" class="menu-item">
+                    <i class="fa-solid fa-building"></i>
+                    <span>Department</span>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/employees}" th:classappend="${page == 'employees' ? 'active' : ''}" class="menu-item">
+                    <i class="fas fa-users"></i>
+                    <span>Employees</span>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/positions}" th:classappend="${page == 'positions' ? 'active' : ''}" class="menu-item">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Positions</span>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/reports}" th:classappend="${page == 'reports' ? 'active' : ''}" class="menu-item">
+                    <i class="fas fa-flag"></i>
+                    <span>Reports</span>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/settings}" th:classappend="${page == 'settings' ? 'active' : ''}" class="menu-item">
+                    <i class="fa-solid fa-bars"></i>
+                    <span>Settings</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    </section>
 </html>
