--- a/time-off-management/src/main/resources/templates/department-list.html
+++ b/time-off-management/src/main/resources/templates/department-list.html
@@ -41,7 +41,7 @@ main {
 
 #department-table th, #department-table td {
 	border: 1px solid #444;
-	padding: 10px;
+	padding: 20px;
 	text-align: left;
 }
 
@@ -180,6 +180,10 @@ main {
         
         .btn-create i {
             margin-right: 8px;
+        }
+        
+        input#headCode.form-control:focus{
+        	color: white;
         }
 </style>
 </head>
