--- a/time-off-management/src/main/resources/static/css/app.css
+++ b/time-off-management/src/main/resources/static/css/app.css
@@ -1,100 +1,163 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(135deg, #2c3e50, #000000);
-    color: #ffffff;
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto', sans-serif;
+	background: linear-gradient(135deg, #2c3e50, #000000);
+	color: #ffffff;
 }
 
 main {
-    min-height: 100vh;
-    padding: 20px 0;
+	min-height: 100vh;
+	padding: 20px 0;
 }
 
 .header {
-    text-align: center;
-    margin-bottom: 20px;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .brand-logo {
-    width: 100px;
-    height: auto;
-    margin-bottom: 10px;
+	width: 100px;
+	height: auto;
+	margin-bottom: 10px;
 }
 
 .brand-title {
-    font-size: 32px;
-    color: #b388ff;
-    margin: 0;
+	font-size: 32px;
+	color: #b388ff;
+	margin: 0;
 }
 
 .search .form-control {
-    padding-left: 2.375rem;
-    color: white;
-    background-color: #141515;
-    border-radius: 10px;
-    line-height: 2.2;
-    border: 1px solid #444;
+	padding-left: 2.375rem;
+	color: white;
+	background-color: #141515;
+	border-radius: 10px;
+	line-height: 2.2;
+	border: 1px solid #444;
 }
 
 #employee-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    color: #fff;
-    background-color: #2d3340;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+	width: 100%;
+	border-collapse: collapse;
+	margin-top: 20px;
+	color: #fff;
+	background-color: #2d3340;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 #employee-table th,
 #employee-table td {
-    border: 1px solid #444;
-    padding: 10px;
-    text-align: left;
+	border: 1px solid #444;
+	padding: 10px;
+	text-align: left;
 }
 
 #employee-table th {
-    background-color: #6200ea;
-    color: #ffffff;
-    font-weight: 500;
-    text-transform: uppercase;
+	background-color: #6200ea;
+	color: #ffffff;
+	font-weight: 500;
+	text-transform: uppercase;
 }
 
 #employee-table tbody tr:nth-child(odd) {
-    background-color: #3b4351;
+	background-color: #3b4351;
 }
 
 #employee-table tbody tr:nth-child(even) {
-    background-color: #2d3340;
+	background-color: #2d3340;
 }
 
 #employee-table tbody tr:hover {
-    background-color: #6200ea;
-    color: #ffffff;
-    cursor: pointer;
+	background-color: #6200ea;
+	color: #ffffff;
+	cursor: pointer;
 }
 
 .input-container i {
-    position: absolute;
-    left: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #6200ea;
+	position: absolute;
+	left: 15px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #6200ea;
 }
 
 .form-control:focus {
-    background-color: rgb(26, 26, 27);
-    border-color: #6200ea;
-    box-shadow: 0 0 0 0.25rem rgba(98, 0, 234, 0.25);
+	background-color: rgb(26, 26, 27);
+	border-color: #6200ea;
+	box-shadow: 0 0 0 0.25rem rgba(98, 0, 234, 0.25);
 }
 
 .btn-secondary {
-    color: whitesmoke;
-    background-color: #1e1e1f;
-    border-color: #292a2c;
-    border-radius: 10px;
+	color: whitesmoke;
+	background-color: #1e1e1f;
+	border-color: #292a2c;
+	border-radius: 10px;
+}
+
+.card {
+	background-color: #353535;
+	border: none;
+	margin-bottom: 20px;
+	border-radius: 15px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+	transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+	transform: translateY(-10px);
+	box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
+}
+
+.card-body {
+	padding: 20px;
+}
+
+.card-title {
+	color:  black;
+	font-weight: bold;
+	font-size: 1.25rem;
+	margin-bottom: 15px;
+}
+
+.card-text strong {
+	color:  #ecf0f1;
+}
+
+.status-dropdown {
+	margin-top: 15px;
+}
+
+.custom-select {
+	background-color: #3a3a3a;
+	color: #e0e0e0;
+	border: 1px solid  #9b59b6;
+	border-radius: 5px;
+}
+
+.btn-primary {
+	background-color: #ffeb3b;
+	border-color: #ffeb3b;
+	color: #121212;
+	margin-top: 10px;
+}
+
+.btn-primary:hover {
+	background-color:  #9b59b6;
+	border-color:  #9b59b6;
+}
+
+.container h1 {
+	color: #ffeb3b;
+	margin-bottom: 30px;
+	text-align: center;
+	font-size: 2rem;
+}
+
+#statusSelect:focus {
+	color:  #9b59b6;
 }
