--- a/time-off-management/src/main/resources/templates/fragments/user-sidebar.html
+++ b/time-off-management/src/main/resources/templates/fragments/user-sidebar.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<section layout:fragment="sidebar" >
 	
-    <nav th:fragment="sidebar"  class="sidebar ">
+    <nav th:fragment="usersidebar"  class="sidebar ">
     	
         <div class="brand">
             <img th:src="@{/images/Eru.jpg}" class="brand-logo" alt="Profile Picture">
@@ -18,23 +18,13 @@
                 </a>
             </li>
             <li>
-                <a th:href="@{/departments}" th:classappend="${page == 'departments' ? 'active' : ''}" class="menu-item">
-                    <i class="fa-solid fa-building"></i>
-                    <span>Department</span>
+                <a th:href="@{/leave-application}" th:classappend="${page == 'form' ? 'active' : ''}" class="menu-item">
+                    <i class="fa-solid fa-plus"></i>
+                    <span>Leave Form</span>
                 </a>
             </li>
             <li>
-                <a th:href="@{/employees}" th:classappend="${page == 'employees' ? 'active' : ''}" class="menu-item">
-                    <i class="fas fa-users"></i>
-                    <span>Employees</span>
-                </a>
-            </li>
-            <li>
-                <a th:href="@{/positions}" th:classappend="${page == 'positions' ? 'active' : ''}" class="menu-item">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Positions</span>
-                </a>
-            </li>
+          
             <li>
                 <a th:href="@{/reports}" th:classappend="${page == 'reports' ? 'active' : ''}" class="menu-item">
                     <i class="fas fa-flag"></i>
