--- a/time-off-management/src/main/resources/templates/leave-request.html
+++ b/time-off-management/src/main/resources/templates/leave-request.html
@@ -1,36 +1,113 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{/layouts/user-board.html}">
 <head>
-    <title>Leave Requests</title>
+<title>Leave Requests</title>
+<style>
+.card {
+	border: 4px solid #0d6efd;
+}
+</style>
 </head>
 <body>
-    <div class="container">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Apply At</th>
-                    <th>Employee</th>
-                    <th>Leave Type</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Remark</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="leaveApplication : ${leaveApplications}">
-                    <td th:text="${leaveApplication.id}"></td>
-                    <td th:text="${leaveApplication.applyAt}"></td>
-                    <td th:text="${leaveApplication.employeeName}"></td>
-                    <td th:text="${leaveApplication.leaveTypeName}"></td>
-                    <td th:text="${leaveApplication.startDate}"></td>
-                    <td th:text="${leaveApplication.endDate}"></td>
-                    <td th:text="${leaveApplication.remark}"></td>
-                    <td th:text="${leaveApplication.status}"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+	<section layout:fragment="content">
+
+		<header class="margin-left" th:fragement="header">
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<div class="m-4">
+					<h1 class="text-white d-lg-inline mb-4">Leave Requests</h1>
+					<h6 class="text-muted d-none d-lg-block mt-3">Here're your
+						 leave requests</h6>
+				</div>
+				<div class="flex-fill"></div>
+
+
+				<div class="navbar nav">
+					<li class="nav-item dropdown"><a href="#"
+						class="d-flex align-items-center nav-link dropdown-toggle"
+						data-bs-toggle="dropdown">
+							<div class="avatar avatar-xl">
+								<img th:src="@{/images/user.jpg}" class="rounded-circle "
+									alt="Face 1" style="width: 50px; height: 50px;">
+							</div>
+							<div class="m-3 text-container">
+								<div class="text-content">
+									<h5 class="font-bold text-truncate" style="color: white; font-size: 14px">
+										<span th:text="${name}"></span>
+									</h5>
+									<h6 class="text-muted mb-0 text-truncate">
+										<span th:text="${email}"></span>
+									</h6>
+								</div>
+							</div>
+					</a>
+
+						<ul class="dropdown-menu">
+							
+							<li>
+								<h6 class="dropdown-item" th:text="${email}" style=" font-size: 14px"></h6>
+							</li>
+
+							<li><a th:href="@{/logout}" id="signoutLink" style=" font-size: 14px"
+								class="dropdown-item">Log out</a></li>
+						</ul></li>
+				</div>
+			</nav>
+		</header>
+
+
+		<div class="row px-5 mt-4">
+			<div class="form-group search">
+				<input type="text" class="form-control" placeholder="Search leaves">
+			</div>
+
+		</div>
+
+		<div class="mt-5 px-4 mx-3  " style="margin-left: 0px;">
+
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4"
+						th:each="leaveApplication : ${leaveApplications}">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Leave Request</h5>
+								<p class="card-text">
+									<strong>Apply At:</strong> <span
+										th:text="${leaveApplication.applyAt}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Name:</strong> <span
+										th:text="${leaveApplication.employeeName}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Leave Type:</strong> <span
+										th:text="${leaveApplication.leaveTypeName}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Start Date:</strong> <span
+										th:text="${leaveApplication.startDate}"></span>
+								</p>
+								<p class="card-text">
+									<strong>End Date:</strong> <span
+										th:text="${leaveApplication.endDate}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Remark:</strong> <span
+										th:text="${leaveApplication.remark}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Status:</strong> <span
+										th:text="${leaveApplication.status}"></span>
+								</p>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
